# rusticators

./: .gitignore  Dockerfile.aws  LICENSE  Pulumi.prod.yaml  Pulumi.test.yaml  Pulumi.yaml  README.md  Taskfile.yml  __main__.py  makefile  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
docs/: index.md  vpc_layouts.md
rusticators/vpc/: lambda_function.py
rusticators/vpc/models/: region_azs.py
rusticators/vpc/utilities/: region.py  vpc.py  vpc_layouts.py  vpc_layouts_old.py
src/vpc/: lambda_function.py
src/vpc/utilities/: region.py  vpc.py  vpc_layouts.py
temp/: Dockerfile  Dockerfile.aws  requirements.txt
