[tool.poetry]
name = "rusticators"
version = "0.1.0"
description = ""
authors = ["stephenbawks <stephen@bawks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
ruff = "^0.0.255"
black = "^23.1.0"


[tool.poetry.group.dev.dependencies]
aws-lambda-powertools = "^2.9.1"
pulumi = "^3.57.1"
pulumi-aws-native = "^0.53.0"
pulumi-aws = "^5.31.0"
boto3 = "^1.26.91"
pytest = "^7.2.2"
mike = "^1.1.2"
pymdown-extensions = "^9.11"
mkdocs-material = "^9.1.6"
mkdocs-git-revision-date-plugin = "^0.3.2"
pulumi-docker = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "./tests"
addopts = [
    "--import-mode=importlib",
    "-ra -vv"
]
