[tool.poetry]
name = "rusticators"
version = "0.1.0"
description = ""
authors = ["stephenbawks <stephen@bawks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cachetools = "^5.3.1"

[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
ruff = "^0.0.255"
black = "^23.1.0"

[tool.poetry.group.dev.dependencies]
pulumi = "^3.57.1"
boto3 = "^1.26.91"
pytest = "^7.2.2"
mike = "^1.1.2"
pymdown-extensions = "^9.11"
mkdocs-material = "^9.1.6"
mkdocs-git-revision-date-plugin = "^0.3.2"
pulumi-docker = "^4.2.0"
pulumi-aws = "^6.6.0"
pulumi-aws-native = "^0.81.0"
bandit = "^1.7.5"

[tool.poetry.group.container.dependencies]
aws-lambda-powertools = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "./tests"
addopts = ["--import-mode=importlib", "-ra -vv"]
